import { describe, it, expect } from 'vitest';

import { convertGraphicDataToProjectStructure, serializeToProject } from './projectSerializer';
import { createMockCodeBlock } from './testUtils';

import type { State } from '../types';

describe('projectSerializer', () => {
	describe('convertGraphicDataToProjectStructure', () => {
		it('converts graphic data to simplified project structure', () => {
			const graphicData = [
				createMockCodeBlock({
					id: 'test-module',
					code: ['test code'],
					x: 80,
					y: 128,
				}),
			];

			// vGrid = 8, hGrid = 16, so x=80 -> gridX=10, y=128 -> gridY=8
			const result = convertGraphicDataToProjectStructure(graphicData, 8, 16);

			expect(result).toMatchSnapshot();
		});

		it('sorts code blocks by id', () => {
			const blockA = createMockCodeBlock({
				id: 'module-b',
				code: ['code b'],
			});

			const blockB = createMockCodeBlock({
				id: 'module-a',
				code: ['code a'],
			});

			const result = convertGraphicDataToProjectStructure([blockA, blockB], 8, 16);

			expect(result[0].code).toEqual(['code a']);
			expect(result[1].code).toEqual(['code b']);
		});

		it('does not include creationIndex in serialized output', () => {
			const graphicData = [
				createMockCodeBlock({
					id: 'test-module',
					code: ['test code'],
					x: 80,
					y: 128,
					creationIndex: 5, // This should NOT appear in output
				}),
			];

			const result = convertGraphicDataToProjectStructure(graphicData, 8, 16);

			// Verify creationIndex is not in the output
			expect(result[0]).not.toHaveProperty('creationIndex');
			// Verify we only have the expected properties
			expect(Object.keys(result[0]).sort()).toEqual(['code', 'gridCoordinates'].sort());
		});
	});

	describe('serializeToProject', () => {
		it('creates a valid Project object from state', () => {
			const mockState = {
				projectInfo: {
					title: 'Test Project',
					author: 'Test Author',
					description: 'Test Description',
				},
				graphicHelper: {
					codeBlocks: new Set(),
					viewport: {
						x: 0,
						y: 0,
						vGrid: 8,
						hGrid: 16,
					},
					postProcessEffects: [],
				},
				compiler: {
					compiledModules: {},
					compilerOptions: {
						memorySizeBytes: 1048576,
					},
					selectedRuntime: 0,
					runtimeSettings: [{ runtime: 'WebWorkerLogicRuntime' as const, sampleRate: 50 }],
					binaryAssets: [],
				},
			} as unknown as State;

			const result = serializeToProject(mockState);

			expect(result).toMatchSnapshot();
		});
	});
});
